@@ -1,2 +1,2 @@
-EBUILD cl-tools-meta-11.3-r3.ebuild 3117 RMD160 7b39bb6874cd515edf3fa20f95470a0da5d32350 SHA1 614e623575e29ebbfea18dc305466c0efb819ed1 SHA256 e6f3a1594bf3e0a736206da229a4b1bbb90237ca3bfdeb404313daeb5bf4aa4a
-MISC ChangeLog 3092 RMD160 26f342a24cda1f65809cddf08636a7cc51d5eb9f SHA1 6556e7383fd4470d37600418f7cb83655b2e81f3 SHA256 8c4792a5730adfba5c112b1dd80218ea5fe364667afb89a736b0b7373d127182
+EBUILD cl-tools-meta-11.3-r4.ebuild 3123 RMD160 6b7ccb4fccb08f7acd541b72c35613c248c392eb SHA1 9b29cb19725e64064d316c0f1fa2c566d79868d1 SHA256 edcd1dfdae545a1a826b214b0ccd2f32d46fd822a1b3a5e35f4565751cc515aa
+MISC ChangeLog 3273 RMD160 9f00d39239629a974ec2c05a68d0d6df34818956 SHA1 4dc7c7d6b17ac7b8cc4ec6f784212b3977c2bed7 SHA256 a9009262f37e9fc829e42058af94163390f64d46518a984bbdb45035e23ea474
