@@ -4,7 +4,7 @@ DIST calculate-install-2.2.11.tar.bz2 64863 RMD160 3073dc8e87fc19913fbda855450e6
 DIST calculate-install-2.2.12.tar.bz2 64953 RMD160 a1b5b4c4c9bb72639e7c6c400458f57179d13684 SHA1 90c5007aeeb6b5379d23ce26d63789f9382884d6 SHA256 f44eac93c4635bc7875399430eaf14f4f27e1f33d1772465ae98c858454d362c
 EBUILD calculate-install-2.2.11.ebuild 709 RMD160 ed5a5467b2a19cdd11bb14bceaf836f77f77b435 SHA1 d0691733e68d0743bad6d36110b40cbc39b2c5c1 SHA256 7266cbd1c878f690cbe0a05fe87c458ec5e292efe852fc504936f4e9291c705a
 EBUILD calculate-install-2.2.12-r1.ebuild 844 RMD160 359030f3da0da36dae2eb66866e3be4fc63bc828 SHA1 23016ecd6a1cc6a86e51fbf5e7731ca756269ca6 SHA256 d7c51a1d33addd458cb6b137c8aa330a80a1e5904a6e648a1557bb4fdb4d9e3a
-EBUILD calculate-install-2.2.12-r2.ebuild 850 RMD160 502952efe4e3569852bc9242e4fe6e0c7429c2ef SHA1 a0ab449e8246e033c97bbec86b5ca73f7bc2e893 SHA256 919ffe11f14cdf2b70fa82035024188babed5ee3d6c839c87468cbba12e923bf
+EBUILD calculate-install-2.2.12-r3.ebuild 853 RMD160 87ed225cfd1ca1f0301f57836638e4a07efb615e SHA1 67af82e4236a86fde5dda8d91877929014c7b3b6 SHA256 928aa9f783e56162bb4d36aaf48bd8e0bec2e4acdb08c6a44350fc736d90137c
 EBUILD calculate-install-2.2.12.ebuild 709 RMD160 14f46017da0f3b440e09b6b5b77cc75437a7b002 SHA1 19e80d46ca61f95e55fb8c39b28d0d29a70350d7 SHA256 38c92d4df32d5b0a47794b2aa439effbb80662d128cc4fa5c3641e96b7208d77
 EBUILD calculate-install-2.2.9999.ebuild 540 RMD160 038eb80ed7ab1120e6305cbfe2eca480a48aa1c0 SHA1 0cc13d21f94d71f0e6bb6dce3e8abfa1f2f66a4f SHA256 7f9bd4b0b6c2fa260f2e93c78fdee24b32545dc2a98e19363f4933dcc32d3557
 MISC ChangeLog 19607 RMD160 09e0e10f4b2bd268e6d02e5388d6f81841c5cf10 SHA1 a1fa1a043a6d51e255c3f6d1cd1b3d9ee8148aa4 SHA256 b81aa55f32c3460c44d9ceff0c103085a7eb30a45d784ae6832d2e61e9f0e3ea
