@@ -1,12 +1,2 @@
-EBUILD calculate-utilities-2.2.11-r12.ebuild 838 RMD160 d5c72a8b4ec2d1471f7d911ff917d5698cbac1f0 SHA1 171b8aa3bbfdacb02e73506e377f9d1d66989872 SHA256 6624f4d903bfef433f25b52ed82119a8f970e3b67f2f55496bc7c8cb72a3a2a1
-EBUILD calculate-utilities-2.2.12-r1.ebuild 832 RMD160 5882f622681fd9ecbbde1bba49a4204114ef8c8f SHA1 3dd06830aa9849d25f9cc2308e093d5e4921ae2e SHA256 303e0f23064db2a13e0e05a286dd2731c0ccb5d488fe725a330f2b8325c08d00
-EBUILD calculate-utilities-2.2.12-r2.ebuild 835 RMD160 3286a38d46db2bfa4eca99cfbed396fdd90a6ff9 SHA1 3e297c5c65e1c2cc9db7eeb9b5322aa74ceab8b5 SHA256 53e1e723ae085567d94f5c15aa42169b1663aa3f1b3f5578861404f3b0129dfd
-EBUILD calculate-utilities-2.2.12-r3.ebuild 835 RMD160 02850d5eb1e7d4bb869dfca540dd6de2e8d63a69 SHA1 51a48154482a6f7086c8b978e8d8380e577c865e SHA256 50bed12155018e21ebf9b180a623a9259a0c7c03c90d511faa6c5f4e6330b94b
-EBUILD calculate-utilities-2.2.12-r4.ebuild 838 RMD160 451dec0c1a0a2b80f99f179ab92d6bd7bd01d6b0 SHA1 e3c4abb3eb0aaefcae930adb9506fdef29135bba SHA256 08827db4ae49a82065096a960cd5f0f4cc2815b71edb25ba48dff61e98c5a95b
-EBUILD calculate-utilities-2.2.12-r5.ebuild 841 RMD160 a0895d160e25d74bc13e10703c7b7cdcf4fae600 SHA1 fdb62c8f56d956e4867d1ada6a2fcb854f2880ed SHA256 57c5bf9424f36cdc48a20d01b25db3323b3706173673241964d9dff1a2e5a861
-EBUILD calculate-utilities-2.2.12-r6.ebuild 841 RMD160 b8d7bcd04aa9d403ecd055527e185847a34a65fc SHA1 94a4b940cc3b6c2d310e38e427c3d595e3948415 SHA256 db944afdcac437ec865cf8250a96672a61e4a4a84599df26b0953b6848ab1486
-EBUILD calculate-utilities-2.2.12-r7.ebuild 841 RMD160 9a915669c1fabdbc090c848190c45e9366879239 SHA1 2cce7146c5713829838262892860868550c16400 SHA256 cd0cda329d09c0ac8f21b11d8cf24097f4ba7711a21d3fa2c9659ade8d3c207e
-EBUILD calculate-utilities-2.2.12-r8.ebuild 841 RMD160 1cb7413eb8d09493685c5de8e2553e73f8ab3646 SHA1 4f014d98ce55d3a96a78c88c83c3caebe6d5ef1b SHA256 f5387f5cc1bef1d075f415437f6ded62168077eb5fe37d5a8e223ea8b5aab47b
-EBUILD calculate-utilities-2.2.12-r9.ebuild 841 RMD160 37a8bafb614a124e2d2545c4485ed0056ea016d7 SHA1 400ee8b44750c03632fc24fffd338bb9b7be7c4b SHA256 4b4cd68f52e118c131b89733b2dede6920e8515804df9a8838122a379cf7fad1
-EBUILD calculate-utilities-2.2.12.ebuild 826 RMD160 2e3f045d37568bcfb15248163b4c04800fefeeac SHA1 2cf9f0cc76002be25ac85c4303f06b6a2506eefc SHA256 aa38dccd206fea10ded4f3d8daf39e4c68e17a4c4420cbc524d043a4c0ddc60b
+EBUILD calculate-utilities-2.2.12-r10.ebuild 841 RMD160 9c7db57d3c91b692ed6c380080a181287605b136 SHA1 e0dfefdac5b8f77193632430b46f0a6a65436931 SHA256 75cbfd6b96724189843c54e0af18d5c112e6e2f9ae4ab9eb089037284c767e0d
 MISC ChangeLog 5603 RMD160 f355f730e6ff6d9c3c736dd6157aacad6a8b3394 SHA1 9569cda75bf80e20e700d41938799a4c33c2b6cf SHA256 dbb1d1512552e7d0be16314c314735b04299ad5364546abddc20ef4077a2e087
