@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-tools-meta-11.3-r4 (02 Apr 2011)
+
+  02 Apr 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cl-tools-meta-11.3-r3.ebuild, +cl-tools-meta-11.3-r4.ebuild:
+  Rename dep
+
 *cl-tools-meta-11.3-r3 (22 Mar 2011)
 
   22 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
